[project]
name = "pbakelompok1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "icu>=0.0.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "morfessor>=2.0.6",
    "newspaper4k>=0.9.5",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "polyglot>=16.7.4",
    "pycld2>=0.42",
    "pyicu>=2.16.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
